test/expected/typedef_cv_explain_ftd_v.out
typedef const void Void; explain void f(Void)
                ^
17: error: void as parameter can not be const
